app/assets/stylesheets/customizations/sidebar.css
.sidebar {
  position: fixed;
  padding-left: 5px;
  max-height: calc(100vh - 5rem);
  overflow-y: hidden;
  overflow-x: auto;
  display: block;
  white-space: nowrap;

  @media (max-width: 767px) {
    position: sticky;
  }

  a.list-group-item {
    padding-left: 0;
  }

  @media (min-width: 768px) {
    height: calc(100vh - 6rem);
    font-size: 80%;
    flex: 0 0 25%;
    max-width: 25%;
    width: 24%;
  }

  @media (min-width: 992px) {
    font-size: 85%;
    flex: 0 0 16.66666667% !important;
    max-width: 16.66666667% !important;
    width: 16%;
  }
}

.sidebar-heading {
  font-size: .85rem;
  text-transform: uppercase;
  color: #467fcf !important;
  font-weight: bold;
  padding: 2px 2px 2px 0;
}

.sidebar-menu {
  padding-top: 2px;
}

